# rl_offboard_train

./: .gitignore
src/depth_convert/: package.xml  setup.cfg  setup.py
src/depth_convert/depth_convert/: depth_convert_node.py
src/depth_convert/resource/: depth_convert
src/px4_ros_com/: CMakeLists.txt
src/px4_ros_com/src/examples/offboard/: keyboard_node.cpp  offboard_control_srv.cpp
src/rl_agent/: package.xml  setup.py
src/rl_agent/launch/: debug_all.launch.py  rl_basic.launch.py  rl_train.launch.py  stage1.txt  train_mode.launch.py
src/rl_agent/resource/: rl_agent
src/rl_agent/rl_agent/: cmd_vel_mux_node.py  episode_manager_node.py  heuristic_policy_node.py  policy_inference_node.py  rl_env_bridge_node.py  rl_metrics_node.py  rl_policy_node.py  ros_rl_env.py  train_rl.py
src/rl_agent/rl_agent/bridges/: rl_env_bridge_node.py
src/rl_agent/rl_agent/envs/: __init__.py  ros_target_tracking_env.py
src/rl_agent/rl_agent/evaluation/: rl_metrics_node.py
src/rl_agent/rl_agent/inference/: policy_inference_node.py
src/rl_agent/rl_agent/orchestration/: episode_manager_node.py
src/rl_agent/rl_agent/supervision/: rl_basic_supervisor.py
src/rl_agent/rl_agent/training/: train_ppo.py
src/rl_agent/rl_agent/utils/: rl_control_utils.py
src/rl_agent/scripts/: record_rl_bag.sh  replay_and_eval.sh
src/target_uav_offboard/: CMakeLists.txt  package.xml
src/target_uav_offboard/launch/: target_offboard.launch.py
src/target_uav_offboard/src/: return_height_coordinator_node.cpp  target_offboard_control.cpp  target_random_motion_node.cpp
src/yolo_detector/: package.xml  setup.py
src/yolo_detector/test/: test_target_depth_node.py
src/yolo_detector/yolo_detector/: camera_tf_publisher_node.py  target_depth_node.py  target_lost_monitor_node.py  tracker_node.py  yolo_node.py
